# tg_bot_2

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
config_data/: config.py
handlers/: other_handlers.py  user_handlers.py
nats/config/: server.conf
storage/: nats_storage.py
utils/: nats_connect.py
