[tool.poetry]
name = "tg-bot-2"
version = "0.1.0"
description = ""
authors = ["JanGodar <2017sofin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
environs = "^11.0.0"
requests = "^2.32.3"
nats-py = "^2.9.0"
ormsgpack = "^1.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
